--- a/NAPS2.Core/WinForms/FImageSettings.resx
+++ b/NAPS2.Core/WinForms/FImageSettings.resx
@@ -123,10 +123,13 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnOK.Location" type="System.Drawing.Point, System.Drawing">
-    <value>276, 299</value>
+    <value>414, 499</value>
+  </data>
+  <data name="btnOK.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="btnOK.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
+    <value>112, 35</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="btnOK.TabIndex" type="System.Int32, mscorlib">
@@ -145,16 +148,19 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnOK.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>11</value>
   </data>
   <data name="btnCancel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="btnCancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>357, 299</value>
+    <value>536, 499</value>
+  </data>
+  <data name="btnCancel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="btnCancel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
+    <value>112, 35</value>
   </data>
   <data name="btnCancel.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -172,7 +178,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnCancel.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>10</value>
   </data>
   <metadata name="ilProfileIcons.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -181,10 +187,13 @@
     <value>True</value>
   </data>
   <data name="cbRememberSettings.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 278</value>
+    <value>20, 467</value>
+  </data>
+  <data name="cbRememberSettings.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="cbRememberSettings.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 17</value>
+    <value>218, 24</value>
   </data>
   <data name="cbRememberSettings.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
@@ -202,16 +211,19 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;cbRememberSettings.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>9</value>
   </data>
   <data name="btnRestoreDefaults.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="btnRestoreDefaults.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 299</value>
+    <value>18, 499</value>
+  </data>
+  <data name="btnRestoreDefaults.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="btnRestoreDefaults.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 23</value>
+    <value>218, 35</value>
   </data>
   <data name="btnRestoreDefaults.TabIndex" type="System.Int32, mscorlib">
     <value>16</value>
@@ -229,13 +241,16 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnRestoreDefaults.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>8</value>
   </data>
   <data name="txtDefaultFilePath.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 25</value>
+    <value>18, 38</value>
+  </data>
+  <data name="txtDefaultFilePath.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="txtDefaultFilePath.Size" type="System.Drawing.Size, System.Drawing">
-    <value>380, 20</value>
+    <value>568, 26</value>
   </data>
   <data name="txtDefaultFilePath.TabIndex" type="System.Int32, mscorlib">
     <value>27</value>
@@ -250,7 +265,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;txtDefaultFilePath.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -259,10 +274,13 @@
     <value>NoControl</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 9</value>
+    <value>18, 14</value>
+  </data>
+  <data name="label1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>88, 13</value>
+    <value>131, 20</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>28</value>
@@ -280,16 +298,19 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="linkPlaceholders.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="linkPlaceholders.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 48</value>
+    <value>18, 74</value>
+  </data>
+  <data name="linkPlaceholders.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="linkPlaceholders.Size" type="System.Drawing.Size, System.Drawing">
-    <value>68, 13</value>
+    <value>100, 20</value>
   </data>
   <data name="linkPlaceholders.TabIndex" type="System.Int32, mscorlib">
     <value>30</value>
@@ -307,13 +328,16 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;linkPlaceholders.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="txtJpegQuality.Location" type="System.Drawing.Point, System.Drawing">
-    <value>376, 19</value>
+    <value>564, 29</value>
+  </data>
+  <data name="txtJpegQuality.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="txtJpegQuality.Size" type="System.Drawing.Size, System.Drawing">
-    <value>38, 20</value>
+    <value>55, 26</value>
   </data>
   <data name="txtJpegQuality.TabIndex" type="System.Int32, mscorlib">
     <value>32</value>
@@ -337,10 +361,13 @@
     <value>NoControl</value>
   </data>
   <data name="tbJpegQuality.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 19</value>
+    <value>9, 29</value>
+  </data>
+  <data name="tbJpegQuality.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="tbJpegQuality.Size" type="System.Drawing.Size, System.Drawing">
-    <value>364, 45</value>
+    <value>546, 69</value>
   </data>
   <data name="tbJpegQuality.TabIndex" type="System.Int32, mscorlib">
     <value>31</value>
@@ -361,10 +388,13 @@
     <value>NoControl</value>
   </data>
   <data name="lblWarning.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 51</value>
+    <value>9, 78</value>
+  </data>
+  <data name="lblWarning.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="lblWarning.Size" type="System.Drawing.Size, System.Drawing">
-    <value>408, 30</value>
+    <value>612, 46</value>
   </data>
   <data name="lblWarning.TabIndex" type="System.Int32, mscorlib">
     <value>33</value>
@@ -388,10 +418,13 @@
     <value>NoControl</value>
   </data>
   <data name="btnChooseFolder.Location" type="System.Drawing.Point, System.Drawing">
-    <value>398, 23</value>
+    <value>597, 35</value>
+  </data>
+  <data name="btnChooseFolder.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="btnChooseFolder.Size" type="System.Drawing.Size, System.Drawing">
-    <value>34, 22</value>
+    <value>51, 34</value>
   </data>
   <data name="btnChooseFolder.TabIndex" type="System.Int32, mscorlib">
     <value>35</value>
@@ -409,7 +442,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnChooseFolder.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="cbSkipSavePrompt.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -418,10 +451,13 @@
     <value>NoControl</value>
   </data>
   <data name="cbSkipSavePrompt.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 68</value>
+    <value>20, 105</value>
+  </data>
+  <data name="cbSkipSavePrompt.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="cbSkipSavePrompt.Size" type="System.Drawing.Size, System.Drawing">
-    <value>108, 17</value>
+    <value>157, 24</value>
   </data>
   <data name="cbSkipSavePrompt.TabIndex" type="System.Int32, mscorlib">
     <value>36</value>
@@ -439,7 +475,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;cbSkipSavePrompt.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
   </data>
   <data name="label3.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -448,10 +484,13 @@
     <value>NoControl</value>
   </data>
   <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 39</value>
+    <value>9, 60</value>
+  </data>
+  <data name="label3.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>70, 13</value>
+    <value>106, 20</value>
   </data>
   <data name="label3.TabIndex" type="System.Int32, mscorlib">
     <value>37</value>
@@ -472,10 +511,13 @@
     <value>0</value>
   </data>
   <data name="cmbTiffCompr.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 55</value>
+    <value>9, 85</value>
+  </data>
+  <data name="cmbTiffCompr.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="cmbTiffCompr.Size" type="System.Drawing.Size, System.Drawing">
-    <value>185, 21</value>
+    <value>276, 28</value>
   </data>
   <data name="cmbTiffCompr.TabIndex" type="System.Int32, mscorlib">
     <value>38</value>
@@ -499,10 +541,13 @@
     <value>NoControl</value>
   </data>
   <data name="cbSinglePageTiff.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 19</value>
+    <value>14, 29</value>
+  </data>
+  <data name="cbSinglePageTiff.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="cbSinglePageTiff.Size" type="System.Drawing.Size, System.Drawing">
-    <value>103, 17</value>
+    <value>151, 24</value>
   </data>
   <data name="cbSinglePageTiff.TabIndex" type="System.Int32, mscorlib">
     <value>39</value>
@@ -523,10 +568,16 @@
     <value>2</value>
   </data>
   <data name="groupJpeg.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 91</value>
+    <value>18, 179</value>
+  </data>
+  <data name="groupJpeg.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
+  <data name="groupJpeg.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="groupJpeg.Size" type="System.Drawing.Size, System.Drawing">
-    <value>420, 87</value>
+    <value>630, 134</value>
   </data>
   <data name="groupJpeg.TabIndex" type="System.Int32, mscorlib">
     <value>40</value>
@@ -544,13 +595,19 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;groupJpeg.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="groupTiff.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 184</value>
+    <value>18, 322</value>
+  </data>
+  <data name="groupTiff.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
+  <data name="groupTiff.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="groupTiff.Size" type="System.Drawing.Size, System.Drawing">
-    <value>420, 87</value>
+    <value>630, 134</value>
   </data>
   <data name="groupTiff.TabIndex" type="System.Int32, mscorlib">
     <value>41</value>
@@ -568,16 +625,49 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;groupTiff.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="cbRewriteExistingFiles.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="cbRewriteExistingFiles.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="cbRewriteExistingFiles.Location" type="System.Drawing.Point, System.Drawing">
+    <value>20, 141</value>
+  </data>
+  <data name="cbRewriteExistingFiles.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
+  <data name="cbRewriteExistingFiles.Size" type="System.Drawing.Size, System.Drawing">
+    <value>282, 24</value>
+  </data>
+  <data name="cbRewriteExistingFiles.TabIndex" type="System.Int32, mscorlib">
+    <value>42</value>
+  </data>
+  <data name="cbRewriteExistingFiles.Text" xml:space="preserve">
+    <value>Rewrite files with existing filenames</value>
+  </data>
+  <data name="&gt;&gt;cbRewriteExistingFiles.Name" xml:space="preserve">
+    <value>cbRewriteExistingFiles</value>
+  </data>
+  <data name="&gt;&gt;cbRewriteExistingFiles.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;cbRewriteExistingFiles.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;cbRewriteExistingFiles.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
+    <value>9, 20</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>444, 334</value>
+    <value>666, 544</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -603,11 +693,17 @@
         AAAAAQAAAAEAAA==
 </value>
   </data>
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
   <data name="$this.MaximumSize" type="System.Drawing.Size, System.Drawing">
-    <value>800, 373</value>
+    <value>1189, 600</value>
   </data>
   <data name="$this.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>400, 373</value>
+    <value>589, 544</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Image Settings</value>
@@ -616,12 +712,12 @@
     <value>ilProfileIcons</value>
   </data>
   <data name="&gt;&gt;ilProfileIcons.Type" xml:space="preserve">
-    <value>NAPS2.WinForms.ILProfileIcons, NAPS2.Core, Version=5.7.1.32493, Culture=neutral, PublicKeyToken=null</value>
+    <value>NAPS2.WinForms.ILProfileIcons, NAPS2.Core, Version=6.1.2.42653, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>FImageSettings</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=5.7.1.32493, Culture=neutral, PublicKeyToken=null</value>
+    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=6.1.2.42653, Culture=neutral, PublicKeyToken=null</value>
   </data>
 </root>
